--- a/Language/Logical/mappView/Visualization/Pages/Page/AreaContent.page
+++ b/Language/Logical/mappView/Visualization/Pages/Page/AreaContent.page
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <pdef:Page xmlns:pdef="http://www.br-automation.com/iat2015/pageDefinition/v2" id="page_0" layoutRefId="layout_0">
   <Assignments>
-    <Assignment type="Content" baseContentRefId="content_AreaHeader" areaRefId="AreaHeader" />
-    <Assignment type="Content" baseContentRefId="content_AreaInfo" areaRefId="AreaInfo" />
-    <Assignment type="Content" baseContentRefId="content_AreaContent" areaRefId="AreaContent" />
-    <Assignment type="Content" baseContentRefId="content_AreaNavigation" areaRefId="AreaNavigation" />
+    <Assignment type="Content" baseContentRefId="content_AreaHeader" areaRefId="AreaHeader" backColor="rgba(176, 224, 230, 1)" />
+    <Assignment type="Content" baseContentRefId="content_AreaInfo" areaRefId="AreaInfo" backColor="rgba(0, 0, 0, 1)" />
+    <Assignment type="Content" baseContentRefId="content_AreaContent" areaRefId="AreaContent" backColor="rgba(240, 128, 128, 1)" />
+    <Assignment type="Content" baseContentRefId="content_AreaNavigation" areaRefId="AreaNavigation" backColor="rgba(50, 205, 50, 1)" />
   </Assignments>
 </pdef:Page>
